--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "spotify-songs-clustering"
+name = "spotify-songs-analysis"
 version = "0.1.0"
 requires-python = ">=3.14"
 readme = "README.md"
